Fix spacing issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -228,14 +228,7 @@ header {
 #container .event_class {
 	padding-bottom: 20px;
 	border-bottom: 1px solid #000;
-
-	h1 {
-		margin-top: 20px;
-	}
-
-	.class_icon {
-		margin: 15px 0;
-	}
+	padding-top: 20px;
 
 	&:nth-child(1) {
 		border-top: 5px solid #000;
@@ -446,9 +439,7 @@ header {
 }
 
 .contact {
-	h1 {
-		margin-top: 20px;
-	}
+	padding-top: 20px;
 
 	.map {
 		width: 370px;
